# docs/swagger.json
@@ -14,7 +14,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "https://swapi-movie-api.herokuapp.com/",
     "basePath": "/",
     "paths": {
         "/api/v1/movies": {
@@ -29,6 +29,44 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.MovieResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ApiError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/movies/:movie_id/characters": {
+            "get": {
+                "description": "Get all characters for a movie by movie id use the sort parameter",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get characters",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Movie ID",
+                        "name": "movie_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CharacterResponse"
                         }
                     },
                     "404": {
